--- a/index.html
+++ b/index.html
@@ -2606,6 +2606,11 @@
                     });
                 }
             });
+            // Hide loading overlay after initialization
+            setTimeout(() => {
+                document.getElementById('loadingOverlay').classList.add('hidden');
+            }, 1500);
+        }
 
             
 
