--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <script src="https://unpkg.com/lucide@latest"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/eruda"></script> 
+<script>eruda.init();</script>
+
+    
     <style>
         * {
             margin: 0;
