--- a/index.html
+++ b/index.html
@@ -2402,7 +2402,7 @@
 <div id="authScreen" class="auth-screen">
     <div class="auth-container">
         <div class="logo-container">
-            <img src="https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/698a063d7a95f71fa9ac96d7/5b4f163f7_1000287857.png" alt="BeelzeChat" class="app-logo">
+            <img src="https://i.postimg.cc/mD0dbHM0/1000287857.png" alt="BeelzeChat" class="app-logo">
             <div class="app-title">BeelzeChat</div>
             <div class="auth-subtitle">Free messaging for everyone</div>
         </div>
