--- a/index.html
+++ b/index.html
@@ -2365,7 +2365,7 @@
 
 
     <div id="loadingScreen" class="loading-screen" style="display: none;">
-        <img src="https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/user_68a6a7036e263b2713cd9fad/91df49946" alt="Beelze Chat" class="loading-logo-img">
+        <img src=" https://i.postimg.cc/YSxkLtbB/1000287853.png" alt="Beelze Chat" class="loading-logo-img">
         <div class="loading-title">Beelze Chat</div>
         <div class="loading-spinner"></div>
         <div class="loading-text">Loading your chats...</div>
